--------------------------------------------------------------------------------
drkns 30.06.2021 01:41:10 +0100 - build 5842

1. Panels autoupdate again.

--------------------------------------------------------------------------------
drkns 29.06.2021 23:22:07 +0100 - build 5841

1. And more.

--------------------------------------------------------------------------------
drkns 29.06.2021 17:58:00 +0100 - build 5840

1. A few more fixes.

--------------------------------------------------------------------------------
drkns 29.06.2021 04:04:29 +0100 - build 5839

1. Correction of 5838.

--------------------------------------------------------------------------------
drkns 29.06.2021 00:41:42 +0100 - build 5838

1. Eradicate idle events. Use ACTL_SYNCHRO if you need one.

2. Correction of panels autoupdate.

--------------------------------------------------------------------------------
drkns 26.06.2021 13:57:43 +0100 - build 5837

1. Continue 5833.1, revert 5833.2.

--------------------------------------------------------------------------------
drkns 25.06.2021 23:38:49 +0100 - build 5836

1. Show 4-bit color codes in color dialog.

--------------------------------------------------------------------------------
drkns 25.06.2021 19:46:48 +0100 - build 5835

1. Continue 5833.1 & 5834.

--------------------------------------------------------------------------------
drkns 24.06.2021 21:42:04 +0100 - build 5834

1. Continue 5833 1 & 2.

--------------------------------------------------------------------------------
drkns 23.06.2021 23:34:45 +0100 - build 5833

1. Since 5804.1 didn't crash and burn, let's go further and poll once per minute if nothing else happens.

2. Remove polling from waitkey / ACTL_WAITKEY processing.

3. Forum: closing viewer/editor with F3/F4 should be more predictable now.

4. Forum: update edit history after changing the lock state.

5. Numpad should work in Windows Terminal now.

6. Refactoring.
