@@ -67,6 +67,7 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include "common/algorithm.hpp"
 #include "common/enum_tokens.hpp"
 #include "common/enum_substrings.hpp"
+#include "common/scope_exit.hpp"
 
 // External:
 
@@ -544,13 +545,13 @@ int EditControl::AutoCompleteProc(bool Manual,bool DelBlock,Manager::Key& BackKe
 				size_t Size;
 				::GetCursorType(Visible, Size);
 				bool IsChanged = false;
-				const auto ExitCode = ComplMenu->Run([&](const Manager::Key& RawKey)
+				const auto ExitCode = ComplMenu->RunEx([&](int Msg, void* Param)
 				{
-					auto MenuKey = RawKey();
-					::SetCursorType(Visible, Size);
-
-					if(!Global->Opt->AutoComplete.ModalList)
+					if (Msg != DN_INPUT)
 					{
+						if (Global->Opt->AutoComplete.ModalList)
+							return 0;
+
 						const auto CurPos = ComplMenu->GetSelectPos();
 						if(CurPos>=0 && (PrevPos!=CurPos || IsChanged))
 						{
@@ -559,10 +560,18 @@ int EditControl::AutoCompleteProc(bool Manual,bool DelBlock,Manager::Key& BackKe
 							SetString(CurPos? ComplMenu->at(CurPos).Name : CurrentInput);
 							Show();
 						}
+
+						return 0;
 					}
 
-					if(MenuKey != KEY_NONE)
-					{
+					const auto& ReadRec = *static_cast<INPUT_RECORD const*>(Param);
+					auto MenuKey = InputRecordToKey(&ReadRec);
+
+					::SetCursorType(Visible, Size);
+
+					if (MenuKey == KEY_NONE)
+						return 0;
+
 						// ввод
 						if(in_closed_range(L' ', MenuKey, std::numeric_limits<wchar_t>::max()) || any_of(MenuKey, KEY_BS, KEY_DEL, KEY_NUMDEL))
 						{
@@ -718,12 +727,12 @@ int EditControl::AutoCompleteProc(bool Manual,bool DelBlock,Manager::Key& BackKe
 							default:
 								{
 									ComplMenu->Close(-1);
-									BackKey=RawKey;
+									BackKey= Manager::Key(MenuKey, ReadRec);
 									Result=1;
 								}
 							}
 						}
-					}
+
 					return 0;
 				});
 				// mouse click
