@@ -62,7 +62,6 @@ public:
 	const string& GetSearchString() const { return m_SearchString; }
 	bool GetSearchHex() const { return m_SearchHex; }
 	void StoreSearchString(string_view Str, bool Hex);
-	bool IsPanelsActive() const;
 
 	// BUGBUG
 
