@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 01.07.2021 03:01:55 +0100 - build 5843
+
+1. Autocomplete-related fixes.
+
+--------------------------------------------------------------------------------
 drkns 30.06.2021 01:41:10 +0100 - build 5842
 
 1. Panels autoupdate again.
